fix flex-based vertical align on login screen

--- a/assets/app/css/style.less
+++ b/assets/app/css/style.less
@@ -31,6 +31,11 @@
     background: @global-selected-background;
 }
 
+.uk-container-verical-center {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
 [data-uk-svg] {
     opacity: .2;
 }
